--- a/bw-web/app/app.css
+++ b/bw-web/app/app.css
@@ -2,6 +2,20 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+@utility before {
+  &::before {
+    content: "";
+    @apply block;
+  }
+}
+
+@utility after {
+  &::after {
+    content: "";
+    @apply block;
+  }
+}
+
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
