--- a/apps/web/app/root.css
+++ b/apps/web/app/root.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
@@ -44,9 +45,81 @@
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
 
-  --font-sans: "Inter", sans-serif;
+  
+  --font-sans: "Switzer", system-ui, sans-serif;
+  /* --font-sans: "Inter", sans-serif; */
 }
 
+:root {
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(13% 0.028 261.692);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(13% 0.028 261.692);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(13% 0.028 261.692);
+  --primary: oklch(51.1% 0.262 276.966);
+  --primary-foreground: oklch(0.969 0.016 293.756);
+  --secondary: oklch(0.967 0.001 286.375);
+  --secondary-foreground: oklch(0.21 0.006 285.885);
+  --muted: oklch(0.967 0.001 286.375);
+  --muted-foreground: oklch(0.552 0.016 285.938);
+  --accent: oklch(0.967 0.001 286.375);
+  --accent-foreground: oklch(0.21 0.006 285.885);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.92 0.004 286.32);
+  --input: oklch(0.92 0.004 286.32);
+  --ring: oklch(67.3% 0.182 276.935);
+  --chart-1: oklch(78.5% 0.115 274.713);
+  --chart-2: oklch(58.5% 0.233 277.117);
+  --chart-3: oklch(51.1% 0.262 276.966);
+  --chart-4: oklch(45.7% 0.24 277.023);
+  --chart-5: oklch(39.8% 0.195 277.366);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(13% 0.028 261.692);
+  --sidebar-primary: oklch(51.1% 0.262 276.966);
+  --sidebar-primary-foreground: oklch(0.969 0.016 293.756);
+  --sidebar-accent: oklch(0.967 0.001 286.375);
+  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
+  --sidebar-border: oklch(0.92 0.004 286.32);
+  --sidebar-ring: oklch(67.3% 0.182 276.935);
+}
+
+.dark {
+  --background: oklch(13% 0.028 261.692);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.21 0.006 285.885);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.21 0.006 285.885);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(58.5% 0.233 277.117);
+  --primary-foreground: oklch(0.969 0.016 293.756);
+  --secondary: oklch(0.274 0.006 286.033);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.274 0.006 286.033);
+  --muted-foreground: oklch(0.705 0.015 286.067);
+  --accent: oklch(0.274 0.006 286.033);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(35.9% 0.144 278.697);
+  --chart-1: oklch(78.5% 0.115 274.713);
+  --chart-2: oklch(58.5% 0.233 277.117);
+  --chart-3: oklch(51.1% 0.262 276.966);
+  --chart-4: oklch(45.7% 0.24 277.023);
+  --chart-5: oklch(39.8% 0.195 277.366);
+  --sidebar: oklch(0.21 0.006 285.885);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(58.5% 0.233 277.117);
+  --sidebar-primary-foreground: oklch(0.969 0.016 293.756);
+  --sidebar-accent: oklch(0.274 0.006 286.033);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(35.9% 0.144 278.697);
+}
+
+/* 
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -80,8 +153,8 @@
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(67.3% 0.182 276.935);
-}
-
+} */
+/* 
 .dark {
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
@@ -114,7 +187,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(35.9% 0.144 278.697);
-}
+} */
 
 @utility before {
   &::before {
@@ -131,7 +204,9 @@
 }
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
+  /* --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  --font-sans: "Switzer", ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -139,14 +214,14 @@
   --scroll-y: 0;
 }
 
-html,
+/* html,
 body {
   @apply bg-white dark:bg-gray-950;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
-}
+} */
 
 @layer base {
   * {
@@ -163,8 +238,19 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
-/* 
+
+  /* 
   body {
     @apply bg-background text-foreground;
   } */
+}
+
+@keyframes move-x {
+  0% {
+    transform: translateX(var(--move-x-from));
+  }
+
+  100% {
+    transform: translateX(var(--move-x-to));
+  }
 }
